@@ -11,6 +11,7 @@
 void
 testTortureExecute (void)
 {
+#ifndef __SDCC_pic16 // TODO: enable when the pic16 ports supports bitfields of size greater than 8 bits!
   int j=1081;
   struct
     {
@@ -19,5 +20,6 @@ testTortureExecute (void)
   if((l.m = j) == j)
     ASSERT(0);
   return;
+#endif
 }
 
