@@ -2,6 +2,12 @@
 
 	* support/regression/ports/pic14/support.c:
 	  Fix for renamed __asm.
+	* support/regression/tests/gcc-torture-execute-pr31169.c,
+	  support/regression/tests/bitfields.c,
+	  support/regression/tests/gcc-torture-execute-20100316-1.c,
+	  support/regression/tests/gcc-torture-execute-pr38422.c,
+	  support/regression/tests/gcc-torture-execute-921016-1.c:
+	  Disable tests that use bitfields of size greater than 8 bits, which is not yet supproted by the pic16 port.
 
 2012-06-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
